web refactored to use model refactored HomePage.html (th:field added)

--- a/web-app/src/main/resources/templates/HomePage.html
+++ b/web-app/src/main/resources/templates/HomePage.html
@@ -17,31 +17,45 @@
         <td style="width: 25%; height: 18px;"; th:text="${el.birthDate}"></td>
         <td style="width: 25%; height: 18px;"; th:text="${el.jobPosition}"></td>
         <td style="width: 25%; height: 18px;"; th:text="${el.workingAddress}"></td>
-        <td style="width: 25%; height: 18px;"; th:text="${el.phoneNumbers}"></td>
+        <td style="width: 25%; height: 18px;"; th:text="${el.phoneNumber}"></td>
         <td style="width: 25%; height: 18px;"; th:text="${el.availibility}"></td>
-</div>
 </div>
 <div class="container mt-5 mb-5">
     <h1>Добавление сотрудника</h1>
-    <form action="/web/post" method="post">
-        <input type="number" name="id" placeholder="Введите ID" class="form-control"><br>
-        <input type="text" name="firstName" placeholder="Введите имя" class="form-control"><br>
-        <input type="text" name="lastName" placeholder="Введите фамилию" class="form-control"><br>
-        <input type="text" name="middleName" placeholder="Введите отчество" class="form-control"><br>
-        <input type="date" name="birthDate" placeholder="Введите дату рождения" class="form-control"><br>
-        <input type="text" name="jobPosition" placeholder="Введите должность" class="form-control"><br>
-        <input type="text" name="workingAddress" placeholder="Введите рабочий адрес" class="form-control"><br>
-        <input type="number" name="age" placeholder="Введите возраст" class="form-control"><br>
-        <input type="text" name="phoneNumbers" placeholder="Введите номер телефона" class="form-control"><br>
-        <input type="number" name="availibilit" placeholder="Введите активность" class="form-control"><br>
+    <form th:object="${newemployee}" action="/web/post" method="post">
+        <input type="number" th:field="*{portalId}" value="5" placeholder="Введите ID" class="form-control"><br>
+        <input type="text" th:field="*{firstName}" value="Serega" placeholder="Введите имя" class="form-control"><br>
+        <input type="text" th:field="*{lastName}" value="Iv" placeholder="Введите фамилию" class="form-control"><br>
+        <input type="text" th:field="*{middleName}" value="Otch" placeholder="Введите отчество" class="form-control"><br>
+        <input type="datetime-local" th:field="*{birthDate}" placeholder="Введите дату рождения" class="form-control"><br>
+        <input type="text" th:field="*{jobPosition}" value="Sis" placeholder="Введите должность" class="form-control"><br>
+        <input type="text" th:field="*{workingAddress}" value="Brest" placeholder="Введите рабочий адрес" class="form-control"><br>
+        <input type="number" th:field="*{age}" value="55" placeholder="Введите возраст" class="form-control"><br>
+        <input type="text" th:field="*{phoneNumber}" value="375 29 777777" placeholder="Введите номер телефона" class="form-control"><br>
+        <input type="number" th:field="*{availibility}" value="99" placeholder="Введите активность" class="form-control"><br>
         <button type="submit" class="btn btn-success">Добавить </button>
     </form>
 </div>
-</div>
-<div class="container mt-5 mb-5">
+<!--<div class="container mt-5 mb-5">
+    <h1>Добавление сотрудника</h1>
+    <form action="/web/post" method="post">
+        <input type="number" name="portalId" value="5" placeholder="Введите ID" class="form-control"><br>
+        <input type="text" name="firstName" value="Serega" placeholder="Введите имя" class="form-control"><br>
+        <input type="text" name="lastName" value="Iv" placeholder="Введите фамилию" class="form-control"><br>
+        <input type="text" name="middleName" value="Otch" placeholder="Введите отчество" class="form-control"><br>
+        <input type="date" name="birthDate" placeholder="Введите дату рождения" class="form-control"><br>
+        <input type="text" name="jobPosition" value="Sis" placeholder="Введите должность" class="form-control"><br>
+        <input type="text" name="workingAddress" value="Brest" placeholder="Введите рабочий адрес" class="form-control"><br>
+        <input type="number" name="age" value="55" placeholder="Введите возраст" class="form-control"><br>
+        <input type="text" name="phoneNumber" value="375 29 777777" placeholder="Введите номер телефона" class="form-control"><br>
+        <input type="number" name="availibility"  value="99" placeholder="Введите активность" class="form-control"><br>
+        <button type="submit" class="btn btn-success">Добавить </button>
+    </form>
+</div>-->
+<!--<div class="container mt-5 mb-5">
     <h1>Изменение данных сотрудника</h1>
     <form action="/web/put/{id}" method="post">
-        <input type="number" name="id" placeholder="Введите ID" class="form-control"><br>
+        <input type="number" name="portalId" placeholder="Введите ID" class="form-control"><br>
         <input type="text" name="firstName" placeholder="Введите имя" class="form-control"><br>
         <input type="text" name="lastName" placeholder="Введите фамилию" class="form-control"><br>
         <input type="text" name="middleName" placeholder="Введите отчество" class="form-control"><br>
@@ -49,11 +63,11 @@
         <input type="text" name="jobPosition" placeholder="Введите должность" class="form-control"><br>
         <input type="text" name="workingAddress" placeholder="Введите рабочий адрес" class="form-control"><br>
         <input type="number" name="age" placeholder="Введите возраст" class="form-control"><br>
-        <input type="text" name="phoneNumbers" placeholder="Введите номер телефона" class="form-control"><br>
-        <input type="number" name="availibilit" placeholder="Введите активность" class="form-control"><br>
+        <input type="text" name="phoneNumber" placeholder="Введите номер телефона" class="form-control"><br>
+        <input type="number" name="availibility" placeholder="Введите активность" class="form-control"><br>
         <button type="submit" class="btn btn-success">Изменить </button>
     </form>
-</div>
+</div>-->
 <div class="container mt-5 mb-5">
     <h1>Удаление сотрудника</h1>
     <form action="/web/del/{id}" method="post">
