--- a/web-app/src/main/resources/templates/HomePage.html
+++ b/web-app/src/main/resources/templates/HomePage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>DZpage</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/bootstrap-5.0.1/scss/bootstrap.scss">
 </head>
 <body>
 <div th:each="el : ${pagelistweb}" >
