--- a/web-app/src/main/resources/templates/HomePage.html
+++ b/web-app/src/main/resources/templates/HomePage.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <title>DZpage</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <link rel="stylesheet" href="/bootstrap-5.0.1/scss/bootstrap.scss">
+    <link rel="stylesheet"
+          th:href="@{/css/bootstrap.min.css/}"
+          href="../static/css/bootstrap.min.css/"
+    >
 </head>
 <body>
 <div th:each="el : ${pagelistweb}" >
