--- a/web-app/src/main/resources/templates/Bye.html
+++ b/web-app/src/main/resources/templates/Bye.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <h1 th:inline="text">Bye [[${#httpServletRequest.remoteUser}]]!}</h1>
-<form th:action="@{/Bye}" method="post">
-    <input type="submit" value="OK">
+<form th:action="@{/logout}" method="post">
+    <input type="submit" value="Sign Out">
 </form>
 </body>
 </html>
