--- a/web-app/src/main/resources/templates/Rules.html
+++ b/web-app/src/main/resources/templates/Rules.html
@@ -9,6 +9,11 @@
           th:href="@{/css/bootstrap.min.css}">
 </head>
 <body>
-<h1>Тут описываем правила пользования Байпорталом</h1>
+<h1>Тут описываем правила пользования Байпорталом
+    <br/>1. Всегда делаем домашку
+    <br/>2. Ничего хорошего без Java у нас не будет
+    <br/>3. Совершенствуем это приложение</h1>
+<h1>Пожалуйста авторизуйтесь</h1>
+<p> </p>Нажмите <a th:href="@{/HomePage}">"ЭТУ кнопку</a> авторизации </p>
 </body>
 </html>
