--- a/web-app/src/main/resources/templates/StartPage.html
+++ b/web-app/src/main/resources/templates/StartPage.html
@@ -10,8 +10,8 @@
 </head>
 <body>
 <h1>Ознакомтесь с правилами</h1>
-<p> </p>Click <a th:href="@{/Rules}">here</a> Правила </p>
+<p> </p>Нажмите <a th:href="@{/Rules}">ЭТУ кнопку</a> Правила </p>
 <h1>Пожалуйста авторизуйтесь</h1>
-<p> </p>Click <a th:href="@{/LoginPage}">here</a> Авторизация </p>
+<p> </p>Нажмите <a th:href="@{/HomePage}">ЭТУ кнопку</a> авторизации </p>
 </body>
 </html>
