--- a/web-app/src/main/resources/templates/LoginPage.html
+++ b/web-app/src/main/resources/templates/LoginPage.html
@@ -14,7 +14,7 @@
 <form th:action="@{/LoginPage}" method="post">
     <div> <label> User Name : <input type="text" name="username"/> </label></div>
     <div><label> Password : <input type="password" name="password"/></label></div>
-    <div><input type="submit" value="Login"/></div>
+    <div><input type="submit" value="Sign In"/></div>
 </form>
 </body>
 </html>
