--- a/web-app/src/main/resources/templates/Rules.html
+++ b/web-app/src/main/resources/templates/Rules.html
@@ -14,6 +14,6 @@
     <br/>2. Ничего хорошего без Java у нас не будет
     <br/>3. Совершенствуем это приложение</h1>
 <h1>Пожалуйста авторизуйтесь</h1>
-<p> </p>Нажмите <a th:href="@{/HomePage}">"ЭТУ кнопку</a> авторизации </p>
+<p> </p>Нажмите <a th:href="@{/web/get}">"ЭТУ кнопку</a> авторизации </p>
 </body>
 </html>
