--- a/web-app/src/main/resources/templates/StartPage.html
+++ b/web-app/src/main/resources/templates/StartPage.html
@@ -12,6 +12,6 @@
 <h1>Ознакомтесь с правилами</h1>
 <p> </p>Нажмите <a th:href="@{/Rules}">ЭТУ кнопку</a> Правила </p>
 <h1>Пожалуйста авторизуйтесь</h1>
-<p> </p>Нажмите <a th:href="@{/HomePage}">ЭТУ кнопку</a> авторизации </p>
+<p> </p>Нажмите <a th:href="@{/web/get}">ЭТУ кнопку</a> авторизации </p>
 </body>
 </html>
