--- a/web-app/src/main/resources/templates/login.html
+++ b/web-app/src/main/resources/templates/login.html
@@ -11,9 +11,9 @@
 <body>
 <div th:if="${param.error}"> Неправильный пароль</div>
 <div th:if="${param.logout}"> Пароль ОК</div>
-<form th:action="@{/LoginPage}" method="post">
-    <div> <label> User Name : <input type="text" name="username"/> </label></div>
-    <div><label> Password : <input type="password" name="password"/></label></div>
+<form th:action="@{/login}" method="post">
+    <div><label> User Name : <input type="text" name="username" autofocus="true"/> </label></div>
+    <div><label> Password: <input type="password" name="password"/> </label></div>
     <div><input type="submit" value="Sign In"/></div>
 </form>
 </body>
